compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__exhaustiveness__case_error_prints_module_alias.snap
---
source: compiler-core/src/type_/tests/exhaustiveness.rs
assertion_line: 1009
expression: "\nimport wibble as wobble\npub fn main() {\n    case wobble.Wobble {\n        wobble.Wibble -> Nil\n    }\n}\n"
---
error: Inexhaustive patterns
  ┌─ /src/one/two.rakun:4:5
  │  
4 │ ╭     case wobble.Wobble {
5 │ │         wobble.Wibble -> Nil
6 │ │     }
  │ ╰─────^

This case expression does not have a pattern for all possible values. If it
is run on one of the values without a pattern then it will crash.

The missing patterns are:

    wobble.Wobble
