compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__exhaustiveness__case_error_prints_prelude_module_when_shadowed.snap
---
source: compiler-core/src/type_/tests/exhaustiveness.rs
expression: "\nimport rakun\nrecord MyResult { Ok Error }\npub fn main() {\n  let res = rakun.Ok(10)\n  case res {\n    rakun.Ok(n) -> Nil\n  }\n}\n"
---
error: Inexhaustive patterns
  ┌─ /src/one/two.rakun:6:3
  │  
6 │ ╭   case res {
7 │ │     rakun.Ok(n) -> Nil
8 │ │   }
  │ ╰───^

This case expression does not have a pattern for all possible values. If it
is run on one of the values without a pattern then it will crash.

The missing patterns are:

    rakun.Error(_)
