compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__exhaustiveness__empty_case_of_custom_type.snap
---
source: compiler-core/src/type_/tests/exhaustiveness.rs
assertion_line: 1148
expression: "\npub record Wibble { Wibble Wobble Wubble }\npub fn main(wibble: Wibble) {\n  case wibble {}\n}\n"
---
----- SOURCE CODE

pub record Wibble { Wibble Wobble Wubble }
pub fn main(wibble: Wibble) {
  case wibble {}
}


----- ERROR
error: Inexhaustive patterns
  ┌─ /src/one/two.rakun:4:3
  │
4 │   case wibble {}
  │   ^^^^^^^^^^^^^^

This case expression does not have a pattern for all possible values. If it
is run on one of the values without a pattern then it will crash.

The missing patterns are:

    Wibble
    Wobble
    Wubble
