compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__exhaustiveness__redundant_2.snap
---
source: compiler-core/src/type_/tests/exhaustiveness.rs
expression: "\npub fn main(x) {\n  case x {\n    True -> 1\n    False -> 2\n    True -> 3\n  }\n}\n"
---
warning: Unreachable case clause
  ┌─ /src/warning/wrn.rakun:6:5
  │
6 │     True -> 3
  │     ^^^^^^^^^

This case clause cannot be reached as a previous clause matches
the same values.

Hint: It can be safely removed.
