compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__exhaustiveness__redundant_4.snap
---
source: compiler-core/src/type_/tests/exhaustiveness.rs
expression: "\npub fn main(x) {\ncase x {\n\"P\" -> 4\n_ -> 3\n\"geeper!\" -> 5\n}\n}\n"
---
----- SOURCE CODE

pub fn main(x) {
case x {
"P" -> 4
_ -> 3
"geeper!" -> 5
}
}


----- WARNING
warning: Unreachable case clause
  ┌─ /src/warning/wrn.rakun:6:1
  │
6 │ "geeper!" -> 5
  │ ^^^^^^^^^^^^^^

This case clause cannot be reached as a previous clause matches the same
values.

Hint: It can be safely removed.
